kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cloud-devops-app
  namespace: cloud-devops

spec:
  replicas: 2

  selector:
    matchLabels:
      app: cloud-devops-app

  template:
    metadata:
      labels:
        app: cloud-devops-app

    spec:
      containers:
        - name: cloud-devops-app
          image: sree2627/cloud-devops-project:latest

          ports:
            - containerPort: 80
