kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloud-devops-service
  namespace: cloud-devops

spec:
  selector:
    app: cloud-devops-app

  type: NodePort

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
